k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-node-app
  template:
    metadata:
      labels:
        app: simple-node-app
    spec:
      containers:
      - name: simple-node-container
        image: tusk03/simple-openshift-node-app
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
